Corrección de inicio de sesión con OAuth